--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "prebuild": "node -e \"require('fs').accessSync('node_modules/vite/dist/node/cli.js')\"",
     "dev": "vite --host localhost",
+    "backend": "node backend/server.js",
+    "backend:pm2": "pm2 start ecosystem.config.cjs",
+    "backend:stop": "pm2 stop sloane-backend",
+    "backend:restart": "pm2 restart sloane-backend",
+    "backend:logs": "pm2 logs sloane-backend",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
