feat: Add start script to package.json for Vercel autostart
- Added 'start' script that runs 'node backend/server.js'
- Enables Vercel/platform autostart to detect backend entry point
- Allows 'npm start' to launch the backend server
- Positioned as first script after prebuild for visibility

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "packageManager": "npm@10.7.0",
   "scripts": {
     "prebuild": "node -e \"require('fs').accessSync('node_modules/vite/dist/node/cli.js')\"",
+    "start": "node backend/server.js",
     "dev": "vite --host localhost",
     "backend": "node backend/server.js",
     "backend:pm2": "pm2 start ecosystem.config.cjs",
