--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,19 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "functions": {
-    "api/index.js": {
-      "maxDuration": 30
-    },
-    "api/backend.js": {
-      "maxDuration": 30
+    "api/server.js": {
+      "maxDuration": 30,
+      "includeFiles": "backend/**"
     }
   },
   "rewrites": [
     {
       "source": "/backend/(.*)",
-      "destination": "/api/backend.js"
+      "destination": "/api/server.js"
     },
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api/server.js"
     },
     {
       "source": "/(.*)",
