--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "@vitejs/plugin-react": "4.3.4",
     "animate.css": "4.1.1",
     "apexcharts": "4.4.0",
     "axios": "1.12.2",
@@ -77,10 +78,10 @@
     "react-toastify": "10.0.6",
     "slick-carousel": "1.8.1",
     "uuid": "10.0.0",
+    "vite": "5.4.20",
     "web-vitals": "2.1.4",
     "wowjs": "1.1.3",
-    "@vitejs/plugin-react": "4.3.4",
-    "vite": "5.4.20"
+    "zod": "^4.1.12"
   },
   "resolutions": {
     "lodash": "4.17.21"
