--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "datatables.net-dt": "2.3.2",
     "dotenv": "17.2.1",
     "express": "5.1.0",
+    "express-rate-limit": "^8.1.0",
     "firebase": "12.3.0",
     "firebase-admin": "13.4.0",
     "flatpickr": "4.6.13",
