--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "express": "5.1.0",
     "express-rate-limit": "^8.1.0",
     "firebase": "12.3.0",
-    "firebase-admin": "13.4.0",
+    "firebase-admin": "^13.4.0",
     "flatpickr": "4.6.13",
     "helmet": "8.1.0",
     "highlight.js": "11.11.1",
