--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "functions": {
     "api/server.js": {
       "maxDuration": 30,
-      "includeFiles": "backend/**"
+  "includeFiles": "backend/**,secrets/sloane-hub-service-account.json"
     }
   },
   "rewrites": [
