--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "apexcharts": "4.4.0",
     "axios": "1.12.2",
     "bootstrap": "5.3.3",
-    "chart.js": "4.5.0",
+    "chart.js": "^4.5.0",
     "cors": "2.8.5",
     "datatables.net": "2.1.8",
     "datatables.net-dt": "2.3.2",
@@ -68,7 +68,7 @@
     "react-beautiful-dnd": "13.1.1",
     "react-bootstrap": "2.10.10",
     "react-calendar": "^6.0.0",
-    "react-chartjs-2": "5.3.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "7.4.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "1.6.5",
