--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "1.6.5",
     "react-modal-video": "2.0.2",
+    "react-query": "^3.39.3",
     "react-quill": "2.0.0",
     "react-router-dom": "6.22.1",
     "react-scroll-to-top": "3.0.0",
