--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,27 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.25",
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.2.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.1.0",
+    "firebase-admin": "^12.0.0",
+    "graphql": "^16.11.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-tools": "^9.0.20",
+    "graphql-ws": "^6.0.6",
     "helmet": "^7.1.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "rate-limit-redis": "^4.2.3",
+    "redis": "^5.9.0",
     "uuid": "^9.0.1",
-    "zod": "^3.23.8",
-    "firebase-admin": "^12.0.0"
+    "ws": "^8.18.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^9.9.0",
