--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "react-slick": "0.30.3",
     "react-slider": "2.0.6",
     "react-toastify": "10.0.6",
+    "recharts": "^3.3.0",
     "slick-carousel": "1.8.1",
+    "swagger-ui-react": "^5.29.5",
     "uuid": "10.0.0",
     "vite": "5.4.20",
     "web-vitals": "2.1.4",
