Fix: Add all backend dependencies for Vercel serverless deployment
- Added Apollo GraphQL dependencies (apollo-server-express, graphql, graphql-tools, graphql-ws)
- Added Redis/cache dependencies (ioredis, redis, rate-limit-redis)
- Added auth/utility dependencies (jsonwebtoken, dataloader)
- Fixes 'Cannot find package ioredis' error
- Fixes 'Cannot find package apollo-server-express' error
- Enables backend API, GraphQL, caching, and dashboard functionality
- All serverless handler dependencies now in root package.json

--- a/package.json
+++ b/package.json
@@ -49,10 +49,15 @@
     "datatables.net": "2.1.8",
     "@graphql-tools/schema": "^10.0.25",
     "apollo-server-express": "^3.13.0",
+    "dataloader": "^2.2.3",
     "graphql": "^16.11.0",
     "graphql-subscriptions": "^3.0.0",
     "graphql-tools": "^9.0.20",
     "graphql-ws": "^6.0.6",
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
+    "rate-limit-redis": "^4.2.3",
+    "redis": "^5.9.0",
     "ws": "^8.18.0",
     "datatables.net-dt": "2.3.2",
     "dotenv": "17.2.1",
